fix: preserve EIP712Challenge required to fetch compute logs (#167)
* fix: preserve EIP712Challenge required to fetch compute logs

* docs: fix javadoc comment